# ordercloud-python

./: .gitignore  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SECURITY_AUDIT.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml  sbom.yml  scorecard.yml
examples/: basic_workflow.py
src/ordercloud/: __init__.py  auth.py  client.py  config.py  errors.py  http.py  middleware.py  sync_client.py
src/ordercloud/models/: __init__.py  address.py  api_client.py  approval.py  assignments.py  auth_models.py  bundle.py  buyer.py  catalog.py  category.py  cost_center.py  credit_card.py  delivery.py  discount.py  integration.py  inventory_record.py  line_item.py  line_item_types.py  message_sender.py  misc.py  open_id_connect.py  order.py  order_return.py  payment.py  price_schedule.py  product.py  product_collection.py  promotion.py  security.py  shared.py  shipment.py  spec.py  spending_account.py  subscription.py  supplier.py  sync.py  user.py  user_group.py  webhook.py
src/ordercloud/resources/: __init__.py  addresses.py  admin_addresses.py  admin_user_groups.py  admin_users.py  api_clients.py  approval_rules.py  base.py  bundle_line_items.py  bundle_subscription_items.py  bundles.py  buyer_groups.py  buyers.py  cart.py  catalogs.py  categories.py  cost_centers.py  credit_cards.py  delivery_configurations.py  discounts.py  entity_syncs.py  error_configs.py  forgotten_credentials.py  group_orders.py  impersonation_configs.py  incrementors.py  integration_events.py  inventory_integrations.py  inventory_records.py  line_items.py  locales.py  me.py  message_senders.py  open_id_connects.py  order_returns.py  order_syncs.py  orders.py  payments.py  price_schedules.py  product_collections.py  (+22 more)
tests/: conftest.py  test_auth.py  test_http.py  test_models.py  test_resource_coverage.py  test_resources.py  test_sync_client.py
tests/integration/: conftest.py  test_auth.py  test_crud.py  test_errors.py  test_pagination.py  test_query_params.py  test_sync_client.py
tools/codegen/: __init__.py  __main__.py  cli.py  grouping.py  ir.py  naming.py  parser.py  renderer.py  transformer.py  type_mapping.py
tools/codegen/templates/: client.py.j2  model_module.py.j2  models_init.py.j2  resource_module.py.j2  resources_init.py.j2
