[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ordercloud"
version = "0.1.0"
description = "Idiomatic Python SDK for Sitecore OrderCloud"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Mark Cassidy Consulting", email = "mark.cassidy@markcassidyconsulting.com" },
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ordercloud"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
