[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ordercloud"
version = "0.1.0"
description = "Idiomatic Python SDK for Sitecore OrderCloud"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Mark Cassidy Consulting", email = "mark.cassidy@markcassidyconsulting.com" },
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.1.0",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]
codegen = [
    "jinja2>=3.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ordercloud"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["ordercloud"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]
# Generated models use dynamic Pydantic patterns that strict mypy flags
# (e.g. Generic[XP] with default dict[str, Any], extra="allow").
# Hand-written infrastructure passes strict. Generated code gets targeted
# relaxations below.

[[tool.mypy.overrides]]
module = "ordercloud.models.*"
# Generated models: Optional fields with None defaults, Generic[XP] patterns,
# and extra="allow" trigger these. The models are structurally validated by
# the codegen pipeline and 100% covered by tests.
disallow_any_generics = false

[[tool.mypy.overrides]]
module = "ordercloud.resources.*"
# Generated resource clients: dynamic method signatures from codegen.
disallow_any_generics = false

[tool.pydantic-mypy]
init_forbid_extra = false
init_typed = true
warn_required_dynamic_aliases = false
