[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ordercloud-python"
version = "2026.4.1"
description = "Idiomatic Python SDK for Sitecore OrderCloud"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Mark Cassidy Consulting", email = "mark.cassidy@markcassidyconsulting.com" },
]
keywords = [
    "ordercloud",
    "sitecore",
    "ecommerce",
    "commerce",
    "sdk",
    "api",
    "async",
    "pydantic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Pydantic :: 2",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.0",
]

[project.urls]
Homepage = "https://github.com/markcassidyconsulting/ordercloud-python"
Repository = "https://github.com/markcassidyconsulting/ordercloud-python"
Changelog = "https://github.com/markcassidyconsulting/ordercloud-python/blob/main/CHANGELOG.md"
Issues = "https://github.com/markcassidyconsulting/ordercloud-python/issues"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.10",
    "mypy>=1.20.1",
]
examples = [
    "python-dotenv>=1.2.2",
]
codegen = [
    "jinja2>=3.1.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ordercloud"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["ordercloud"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]
# Generated models use dynamic Pydantic patterns that strict mypy flags
# (e.g. Generic[XP] with default dict[str, Any], extra="allow").
# Hand-written infrastructure passes strict. Generated code gets targeted
# relaxations below.

[[tool.mypy.overrides]]
module = "ordercloud.models.*"
# Generated models: Optional fields with None defaults, Generic[XP] patterns,
# and extra="allow" trigger these. The models are structurally validated by
# the codegen pipeline and 100% covered by tests.
disallow_any_generics = false

[[tool.mypy.overrides]]
module = "ordercloud.resources.*"
# Generated resource clients: dynamic method signatures from codegen.
disallow_any_generics = false

[tool.pydantic-mypy]
init_forbid_extra = false
init_typed = true
warn_required_dynamic_aliases = false
